[gd_scene load_steps=5 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://art/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 4
outline_color = Color( 0.121569, 0.109804, 0.333333, 1 )
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="UI" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 38.0
color = Color( 0.180392, 0.286275, 0.533333, 0.886275 )

[node name="ScoreLabel" type="Label" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -15.0
margin_right = 159.0
margin_bottom = 15.0
theme = ExtResource( 1 )
text = "Score: 0"

[node name="ModificationLabel" type="Label" parent="UI"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -15.0
margin_bottom = 15.0
grow_horizontal = 0
theme = ExtResource( 1 )
text = "No modifications."
align = 2

[node name="CounterLabel" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -43.0
margin_right = 43.0
margin_bottom = 73.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 1 )
text = "10"
align = 2

[node name="CounterTimer" type="Timer" parent="."]

[connection signal="timeout" from="CounterTimer" to="." method="_on_CounterTimer_timeout"]
